--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 <body>
 
 <h1>Este repositorio es 100% robs</h1>
-<div><img src="https://pbs.twimg.com/media/F-Ldc54bUAAJYt1.jpg:large" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
+<div><img src="https://pbs.twimg.com/media/F-Ldc54bUAAJYt1.jpg" alt="Hello World from Space" style="width:100%;max-width:960px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>A new line in our file!</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+<div><img src="https://pbs.twimg.com/media/F-Ldc54bUAAJYt1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 <h1>no de raul!</h1>
-<div><img src="img_hello_world.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
+<div><img src="https://pbs.twimg.com/media/F-Ldc54bUAAJYt1.jpg" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
 <p>This is the first file in my new Git Repo.</p>
 <p>This line is here to show how merging works.</p>
-<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+<div><img src="https://pbs.twimg.com/media/F-Ldc54bUAAJYt1.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 
 </body>
 </html>
